Changes for show imagens on home Fix align

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -34,7 +34,7 @@ top: 0;
 width: 100%;
 height: 100%;
 z-index: 1;
-opacity: 0.8;
+opacity: 0.9;
 // background-image: url('http://placekitten.com/1500/1000');
 background-image: url('app/shared/bg6.jpg');
 background-repeat: repeat;
@@ -68,3 +68,10 @@ h2, h3 {
   font-weight: lighter;
   align: center;
 }
+
+.imageX{
+     text-align: center;
+     max-width: 40%;
+     width: auto;
+     height: auto !important; /* needs to be important because md-card also sets it that way */
+  }
